test(order): fix OrderServiceImplTest NPE, remove unnecessary stubs, add full DTO mock (all 38 tests passing)